# setbit-python

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  example.py  pyproject.toml  pytest.ini  setup.py
setbit/: __init__.py  client.py  exceptions.py  utils.py
tests/: __init__.py  test_client.py  test_tracking.py  test_variants.py
